# tox-ansible

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  .yamllint  AGENTS.md  CHANGELOG  LICENSE  README.md  TODO.txt  cspell.config.yaml  galaxy.yml  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.agents/skills/adr-new/: SKILL.md
.agents/skills/adr-new/references/: adr-new-example.md
.agents/skills/update-matrix/: SKILL.md
.agents/skills/update-matrix/references/: sources.md
.config/: constraints.txt  dictionary.txt  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: ack.yml  push.yml  pushes.yml  release-drafter.yml  release.yml  run.yml  tox.yml
.sdlc/adrs/: ADR-001-downstream-matrix-extends-upstream.md  README.md
.sdlc/templates/: adr.md
docs/: architecture.md  configuration.md  contributor_guide.md  faq.md  galaxy.yml  index.md  installation.md  integration.ini  sanity.ini  unit.ini  user_guide.md
scripts/: generate_adr_index.py
src/ansitest/: __init__.py
src/tox_ansible/: __init__.py  _yaml.py  compat.py  hooks.py  options.py  plugin.py  tox_ansible_test_case.py  tox_base_case.py  tox_case_base.py  tox_helper.py  tox_lint_case.py  tox_molecule_case.py  tox_test_case.py  utils.py
src/tox_ansible/ansible/: __init__.py  collection.py  role.py  scenario.py
src/tox_ansible/filter/: __init__.py  base_filter.py  by_driver.py  by_role.py  by_scenario.py
src/tox_ansible/matrix/: __init__.py  axes.py
src/tox_ansible_collection/: ansible.py  envs.py  hooks.py  options.py  tox.py  tox_case_base.py
src/tox_ansible_collection/ansible/: collection.py  role.py  scenario.py
src/tox_ansible_collection/matrix/: __init__.py  axes.py
tests/: conftest.py  test_ansible.py  test_by_driver.py  test_by_role.py  test_by_scenario.py  test_collection.py  test_everything.py  test_filter.py  test_matrix.py  test_options.py  test_role.py  test_scenario.py  test_tox_case_base.py  test_tox_helper.py  test_tox_lint_case.py  test_tox_molecule_case.py  test_tox_test_case.py  test_utils.py  types.py  util.py
tests/fixtures/collection/: tox.ini
tests/fixtures/collection/roles/complex/molecule/name_mismatch/: molecule.yml
tests/fixtures/collection/roles/simple/molecule/default/: converge.yml  molecule.yml
tests/fixtures/collection/roles/simple/tasks/: main.yml
tests/fixtures/expand_collection/: molecule_one.yml  molecule_two.yml  tox.ini
tests/fixtures/expand_collection_comma/: galaxy.yml  tox.ini
tests/fixtures/expand_collection_newlines/: .tox.ini.swn  tox.ini
tests/fixtures/expand_collection_newlines/roles/simple/molecule/default/: molecule.yml
tests/fixtures/has_deps/: tox.ini
tests/fixtures/has_deps/molecule/two/: molecule.yml
tests/fixtures/has_deps/roles/simple/molecule/default/: molecule.yml
tests/fixtures/integration/test_ade_workflow/: README.md  galaxy.yml
tests/fixtures/integration/test_ade_workflow/plugins/module_utils/: untested.py
tests/fixtures/integration/test_ade_workflow/plugins/modules/: hello.py
tests/fixtures/integration/test_ade_workflow/tests/: requirements.yml
tests/fixtures/integration/test_ade_workflow/tests/unit/: test_hello.py
tests/fixtures/integration/test_basic/: tox-ansible.ini
tests/fixtures/integration/test_basic/extensions/molecule/default/: converge.yml  molecule.yml  verify.yml
tests/fixtures/integration/test_basic/tests/integration/: test_placeholder.py
tests/fixtures/integration/test_downstream_config/: README.md  galaxy.yml  pyproject.toml
tests/fixtures/integration/test_molecule_disabled/: galaxy.yml  pyproject.toml
tests/fixtures/integration/test_pyproject_config/: README.md  pyproject.toml
tests/fixtures/integration/test_skip/: tox-ansible.ini
tests/fixtures/integration/test_supplement/: galaxy.yml
tests/fixtures/integration/test_user_provided/: tox-ansible.ini
tests/fixtures/is_precommit/: molecule.yml  tox.ini
tests/fixtures/is_precommit/roles/complex/molecule/openstack/: molecule.yml
tests/fixtures/is_precommit/roles/simple/molecule/default/: converge.yml
tests/fixtures/not_collection/: tox.ini
tests/fixtures/nothing/: tox.ini
tests/fixtures/nothing/molecule/dont_find_me/: molecule.yml
tests/fixtures/simplified/: galaxy.yml  tox.ini
tests/fixtures/simplified/roles/myrole/molecule/another/: converge.yml
tests/fixtures/unit/test_type/: tox-ansible.ini
tests/fixtures/unit/test_type/tests/integration/targets/smoke/tasks/: main.yml
tests/integration/: test_ade_workflow.py  test_basic.py  test_downstream_config.py  test_molecule_disabled.py  test_pyproject_config.py  test_skip.py  test_supplement.py  test_user_provided.py
tests/unit/: __init__.py  test_downstream_matrix.py  test_plugin.py  test_plugin_molecule.py  test_type.py
tools/: test_all.sh
