[metadata]
name = tox-ansible
url = https://github.com/ansible-community/tox-ansible
project_urls =
    Bug Tracker = https://github.com/ansible-community/tox-ansible/issues
    Release Management = https://github.com/ansible-community/tox-ansible/releases
    CI = https://github.com/ansible-community/tox-ansible/actions
    Source Code = https://github.com/ansible-community/tox-ansible
description = Auto-generate environments for molecule role testing
long_description = file: README.md
long_description_content_type = text/markdown
author = Greg Hellings
author_email = greg.hellings@gmail.com
maintainer = Greg Hellings
maintainer_email = greg.hellings@gmail.com
license = MIT
; license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: tox
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
keywords =
    ansible
    tox
    tox-plugin

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  tox >= 3.18, < 4.0  # allowlist_externals
  py >= 1.9.0
  pyyaml

[options.entry_points]
tox =
  ansible-collection = tox_ansible.hooks

[options.packages.find]
where = src
